infra-cluster/infrastructure-observability/ingresses/ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: observability
  labels:
    app: alertmanager
  annotations:
    lab42.io/mdns.enabled: "true"
    lab42.io/mdns.name: "alertmanager"
spec:
  ingressClassName: nginx
  rules:
    - host: alertmanager.example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observability-kube-prometheus-stack-alertmanager
                port:
                  number: 9093
