infra-cluster/infrastructure-observability/ingresses/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: observability
  labels:
    app: grafana
  annotations:
    lab42.io/mdns.enabled: "true"
    lab42.io/mdns.name: "grafana"
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observability-kube-prometheus-stack-grafana
                port:
                  number: 80
