infra-cluster/infrastructure-observability/ingresses/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: observability
  labels:
    app: prometheus
  annotations:
    lab42.io/mdns.enabled: "true"
    lab42.io/mdns.name: "prometheus"
spec:
  ingressClassName: nginx
  rules:
    - host: "prometheus.${AI_APPLIANCE_DOMAIN:=example.local}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observability-kube-prometheus-stack-prometheus
                port:
                  number: 9090
